log
Thu 07 Sep 2023 02:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
02bdc23
Thu 07 Sep 2023 02:37:32 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
67a4fcf
Thu 07 Sep 2023 02:44:26 PM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:10: error: ‘Pair’ has no member named ‘next’
   54 |   newPair->next = map->buckets[index];
      |          ^~
Compilation failed
eb8792c
Thu 07 Sep 2023 02:52:36 PM UTC: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:1: error: ‘e’ undeclared (first use in this function)
   45 | e
      | ^
hashmap.c:45:1: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:45:2: error: expected ‘;’ before ‘if’
   45 | e
      |  ^
      |  ;
   46 |   // Verificar si el bucket ya tiene elementos
   47 |   if (map->buckets[index] == NULL) {
      |   ~~
hashmap.c:44:10: error: unused variable ‘newPair’ [-Werror=unused-variable]
   44 |   Pair * newPair = createPair(key, value);
      |          ^~~~~~~
hashmap.c:43:8: error: unused variable ‘index’ [-Werror=unused-variable]
   43 |   long index = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1f0bf5e
Thu 07 Sep 2023 02:52:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e1dd6b
Thu 07 Sep 2023 02:55:20 PM UTC: 
 hashmap.c | 30 ++++++++++++++++++++----------
 1 file changed, 20 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:22: error: ‘Pair’ has no member named ‘next’
   56 |     current = current->next;
      |                      ^~
hashmap.c:67:13: error: ‘Pair’ has no member named ‘next’
   67 |     previous->next = newPair;
      |             ^~
Compilation failed
2330116
Thu 07 Sep 2023 03:08:46 PM UTC: 
 hashmap.c | 50 ++++++++++++++++++--------------------------------
 1 file changed, 18 insertions(+), 32 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:62: error: ‘INITIAL_BUCKET_SIZE’ undeclared (first use in this function)
   49 |       map->buckets[index] = (Pair **)malloc(sizeof(Pair *) * INITIAL_BUCKET_SIZE);
      |                                                              ^~~~~~~~~~~~~~~~~~~
hashmap.c:49:62: note: each undeclared identifier is reported only once for each function it appears in
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:33,
                 from test.c:3:
hashmap.c:51:36: error: incompatible types when assigning to type ‘Pair’ from type ‘void *’
   51 |           map->buckets[index][i] = NULL;
      |                                    ^~~~
In file included from test.c:4:
hashmap.c:56:42: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
   56 |   for (int i = 0; map->buckets[index][i] != NULL; i++) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~ ^~
      |                                      |
      |                                      Pair
hashmap.c:57:40: error: invalid type argument of ‘->’ (have ‘Pair’)
   57 |       if (strcmp(map->buckets[index][i]->key, key) == 0) {
      |                                        ^~
hashmap.c:59:33: error: invalid type argument of ‘->’ (have ‘Pair’)
   59 |           map->buckets[index][i]->value = value;
      |                                 ^~
hashmap.c:66:40: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
   66 |   while (map->buckets[index][position] != NULL) {
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~
      |                             |
      |                             Pair
hashmap.c:72:35: error: incompatible types when assigning to type ‘Pair’ from type ‘Pair *’
   72 |   map->buckets[index][position] = newPair;
      |                                   ^~~~~~~
Compilation failed
c714628
